--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     --primario: #784D3C;
     --blanco: #FFFFFF;
     --negro: #000000;
+    --gris: #E1E1E1;
 }
 html{
     box-sizing: border-box;
@@ -67,4 +68,81 @@ img{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;/* horizontal vertical*/
+}
+.header__texto{
+    text-align: center;
+    color: var(--blanco);
+    margin-top: 5rem;
+}
+@media (min-width: 768px) {
+    .header__texto{
+        margin-top: 15rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .barra{
+        display: flex;
+        justify-content: space-between;/* Alinear Horizontálmente*/
+        align-items: center;/* Alinear Verticálmente*/
+    }
+}
+.logo{
+    color: var(--blanco);
+}
+.logo__nombre{
+    font-weight: 400;
+}
+.logo__bold{
+    font-weight: 700;
+}
+@media (min-width: 768px) {
+    .navegacion{
+        display: flex;
+        gap: 2rem;
+    }
+}
+.navegacion__enlace{
+    display: block;
+    text-align: center;
+    font-size: 1.8rem;
+    color: var(--blanco);
+}
+
+/** Contenido Principal **/
+@media (min-width: 768px) {
+    .contenido-principal{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
+    }
+}
+.entrada{
+    border-bottom: 1px solid var(--gris);/* Crea una línea de separación debajo*/
+    margin-bottom: 2rem;
+}
+/* Hace que la última entrada no tenga la línea de separación debajo.*/
+.entrada:last-of-type{
+    border: none;
+    margin-bottom: 0;
+}
+.boton{
+    display: block;
+    font-family: var(--fuenteHeading);
+    color: var(--blanco);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;/* Separación del Botón con la línea gris*/
+}
+@media (min-width: 768px) {
+    .boton{
+        display: inline-block;/* A diferencia del inline, con inline-block sí respeta el margin y el width*/
+    }
+}
+.boton--primario{
+    background-color: var(--negro);
+
 }
