--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,9 @@ body{
 
 /** Globales **/
 .contenedor{
-    max-width: 120rem;
-    width: 90%;
+    /*max-width: 120rem;*/
+    /*width: 90%;*/
+    width: min(90%, 120rem);
     margin: 0 auto;
 }
 
@@ -33,6 +34,7 @@ a{
 
 h1, h2, h3, h4{
     font-family: var(--fuenteHeading);
+    line-height: 3rem;
 }
 h1{
     font-size: 4.8rem;
@@ -79,7 +81,9 @@ img{
         margin-top: 15rem;
     }
 }
-
+.barra{
+    padding-top: 4rem;
+}
 @media (min-width: 768px) {
     .barra{
         display: flex;
@@ -144,5 +148,105 @@ img{
 }
 .boton--primario{
     background-color: var(--negro);
+}
+.boton--secundario{
+    background-color: var(--primario);
+}
+
+/** Sidebar **/
+.cursos{
+    list-style: none;
+}
+.widget-curso{
+    border-bottom: 1px solid var(--gris);/* Crea una línea de separación debajo*/
+    margin-bottom: 2rem;
+}
+.widget-curso:last-of-type{
+    border: none;
+    margin-bottom: 0;
+}
+.widget-curso__label,
+.curso__label{
+    font-family: var(--fuenteHeading);
+    font-weight: bold;
+}
+.widget-curso__info,
+.curso__info{
+    font-weight: normal;
+}
+.widget-curso__label,
+.widget-curso__info,
+.curso__label,
+.curso__info{
+    font-size: 2rem;
+}
+/** Footer **/
+.footer{
+    background-color: var(--negro);
+    padding-bottom: 3rem;
+    margin-top: 4rem;
+}
+
+/** Sobre Nosotros **/
+@media (min-width: 768px) {
+    /* Estilo Flexbox
+    .sobre-nosotros{
+        display: flex;
+        gap: 2rem;
+    }
+    .sobre-nosotros__imagen,
+    .sobre-nosotros__texto{
+        flex-basis: 50%; El el width de flex
+    }
+    */
+
+    /*Estilo Grid*/
+    .sobre-nosotros{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+/** Cursos **/
+.curso{
+    padding: 3rem 0;
+    border-bottom: 1px solid var(--gris);
+}
+@media (min-width: 768px) {
+    .curso{
+        display: grid;
+        grid-template-columns: 1fr 2fr;/*33.3% 66.6%;*/
+        column-gap: 2rem;
+    }
+}
+.curso:last-of-type{
+    border: none;
+    margin-bottom: 0;
+}
+
+/** Contacto **/
+.contacto-bg{
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.formulario{
+    background-color: var(--blanco);
+    margin: -5rem auto 0 auto;
+    width: 95%;
+    padding: 5rem;
+}
+.campo{
+
+}
+.campo__label{
+
+}
+.campo__field{
+
+}
+.campo__field--textarea{
 
 }
