--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,13 @@ img{
 }
 
 /** Header **/
-.header{
+.webp .header{
+    background-image: url(../img/banner.webp);
+}
+.no-webp .header{
     background-image: url(../img/banner.jpg);
+}
+.header{
     height: 60rem;
     background-size: cover;
     background-repeat: no-repeat;
@@ -140,11 +145,15 @@ img{
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 2rem;/* Separación del Botón con la línea gris*/
+    border: none;
 }
 @media (min-width: 768px) {
     .boton{
         display: inline-block;/* A diferencia del inline, con inline-block sí respeta el margin y el width*/
     }
+}
+.boton:hover{
+    cursor: pointer;
 }
 .boton--primario{
     background-color: var(--negro);
@@ -239,14 +248,18 @@ img{
     padding: 5rem;
 }
 .campo{
-
+    display: flex;
+    margin-bottom: 2rem;
 }
 .campo__label{
-
+    flex: 0 0 9rem;
+    text-align: right;
+    padding-right: 2rem;
 }
 .campo__field{
-
+    flex: 1;
+    border: 1px solid var(--gris);
 }
 .campo__field--textarea{
-
+    height: 20rem;
 }
